--- a/style.css
+++ b/style.css
@@ -75,13 +75,13 @@ body {
     color: #000;
 }
 
-@media(max-width:568px) {
+@media(max-width:500px) {
 
-    .pimg,
+    /* .pimg,
     .pimg2,
     .pimg3 {
         background-attachment: fixed;
-    }
+    } */
 
     .ptext {
         font-size: 20px;
